# LineRemoverNN_V2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
lineremovernn/: __main__.py
lineremovernn/commands/: __init__.py  command.py  download_dataset.py  generate_pages.py  ls_models.py  preview_dataset.py  test.py  train.py
lineremovernn/data/: page_generator.py  pages_dataset.py
lineremovernn/data/datasets/: __init__.py  dataset.py  iam.py
lineremovernn/model/: infer.py  model.py  models.py  train.py
lineremovernn/utils/: consts.py  logging.py  loss.py  paired_transform.py  tiles.py
