[project]
name = "lineremovernn"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "distro>=1.9.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]


[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"

[tool.setuptools]
py-modules = []

[tool.uv]
default-groups = []

[tool.uv.workspace]
members = ["."]

[tool.uv.sources]
lineremovernn = { workspace = true }

[dependency-groups]
dev = ["lineremovernn", "pre-commit>=4.5.1"]

[project.scripts]
lineremovernn = "lineremovernn.__main__:main"
